--- a/config
+++ b/config
@@ -13,11 +13,17 @@ CONFIG_BUSYBOX_CONFIG_DELUSER=y
 CONFIG_BUSYBOX_CONFIG_DIFF=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_DATE_NANO=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_DIFF_DIR=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_IPC_SYSLOG=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_IPC_SYSLOG_BUFFER_SIZE=64
 CONFIG_BUSYBOX_CONFIG_FEATURE_PS_LONG=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_SEAMLESS_BZ2=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_SHOW_THREADS=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_STAT_FILESYSTEM=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_STAT_FORMAT=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_SYSLOG=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_SYSLOGD_CFG=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_SYSLOGD_PRECISE_TIMESTAMP=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_SYSLOGD_READ_BUFFER_SIZE=256
 # CONFIG_BUSYBOX_CONFIG_FEATURE_TOP_DECIMALS is not set
 # CONFIG_BUSYBOX_CONFIG_FEATURE_TOP_SMP_CPU is not set
 # CONFIG_BUSYBOX_CONFIG_FEATURE_TOP_SMP_PROCESS is not set
@@ -28,12 +34,14 @@ CONFIG_BUSYBOX_CONFIG_FEATURE_VI_UNDO_QUEUE_MAX=32
 CONFIG_BUSYBOX_CONFIG_FEATURE_XARGS_SUPPORT_PARALLEL=y
 CONFIG_BUSYBOX_CONFIG_IOSTAT=y
 CONFIG_BUSYBOX_CONFIG_LOADKMAP=y
+CONFIG_BUSYBOX_CONFIG_LOGREAD=y
 # CONFIG_BUSYBOX_CONFIG_LSPCI is not set
 # CONFIG_BUSYBOX_CONFIG_LSUSB is not set
 CONFIG_BUSYBOX_CONFIG_NOHUP=y
 CONFIG_BUSYBOX_CONFIG_PKILL=y
 CONFIG_BUSYBOX_CONFIG_STAT=y
 CONFIG_BUSYBOX_CONFIG_STTY=y
+CONFIG_BUSYBOX_CONFIG_SYSLOGD=y
 CONFIG_BUSYBOX_CONFIG_TELNET=y
 CONFIG_BUSYBOX_CONFIG_TIMEOUT=y
 CONFIG_BUSYBOX_CONFIG_WATCH=y
@@ -62,12 +70,15 @@ CONFIG_KERNEL_PID_NS=y
 CONFIG_KERNEL_USER_NS=y
 CONFIG_KERNEL_UTS_NS=y
 # CONFIG_PACKAGE_dnsmasq is not set
+CONFIG_PACKAGE_keepalived=m
 CONFIG_PACKAGE_kmod-8021q=y
 CONFIG_PACKAGE_kmod-ata-ahci=y
 CONFIG_PACKAGE_kmod-ata-core=y
+# CONFIG_PACKAGE_kmod-ath10k-ct is not set
 CONFIG_PACKAGE_kmod-block2mtd=y
 CONFIG_PACKAGE_kmod-bridge=y
 CONFIG_PACKAGE_kmod-crypto-gcm=y
+# CONFIG_PACKAGE_kmod-gobinet is not set
 CONFIG_PACKAGE_kmod-gpio-button-hotplug=y
 CONFIG_PACKAGE_kmod-hid=y
 CONFIG_PACKAGE_kmod-hid-generic=y
@@ -76,10 +87,14 @@ CONFIG_PACKAGE_kmod-i2c-gpio-custom=y
 CONFIG_PACKAGE_kmod-ifb=y
 CONFIG_PACKAGE_kmod-ikconfig=y
 CONFIG_PACKAGE_kmod-input-evdev=y
+# CONFIG_PACKAGE_kmod-fs-ksmbd is not set
 CONFIG_PACKAGE_kmod-loop=y
 CONFIG_PACKAGE_kmod-macvlan=y
 CONFIG_PACKAGE_kmod-mmc=y
 CONFIG_PACKAGE_kmod-mmc-spi=y
+# CONFIG_PACKAGE_kmod-nft-offload is not set
+# CONFIG_PACKAGE_kmod-drm-nouveau is not set
+# CONFIG_PACKAGE_kmod-pcie_mhi is not set
 CONFIG_PACKAGE_kmod-random-core=y
 CONFIG_DEFAULT_kmod-r8169=y
 CONFIG_PACKAGE_kmod-scsi-core=y
@@ -164,19 +179,25 @@ CONFIG_PACKAGE_kmod-of-mdio=y
 CONFIG_PACKAGE_kmod-pcnet32=y
 CONFIG_PACKAGE_kmod-phy-broadcom=y
 CONFIG_PACKAGE_kmod-ppfe=y
+# CONFIG_PACKAGE_kmod-qmi_wwan_f is not set
 CONFIG_PACKAGE_kmod-r6040=y
+# CONFIG_PACKAGE_kmod-r8101 is not set
 CONFIG_PACKAGE_kmod-r8169=y
+# CONFIG_PACKAGE_kmod-rtl8812au-ct is not set
 CONFIG_PACKAGE_kmod-sis190=y
 CONFIG_PACKAGE_kmod-sis900=y
 CONFIG_PACKAGE_kmod-skge=y
 CONFIG_PACKAGE_kmod-sky2=y
 CONFIG_PACKAGE_kmod-solos-pci=y
 CONFIG_PACKAGE_kmod-spi-ks8995=y
+# CONFIG_PACKAGE_kmod-sprd_pcie is not set
 CONFIG_PACKAGE_kmod-tg3=y
+CONFIG_PACKAGE_kmod-tls=y
 CONFIG_PACKAGE_kmod-tulip=y
 CONFIG_PACKAGE_kmod-via-rhine=y
 CONFIG_PACKAGE_kmod-via-velocity=y
 CONFIG_PACKAGE_kmod-vmxnet3=y
+# CONFIG_PACKAGE_kmod-xr-usb-serial is not set
 CONFIG_PACKAGE_kmod-fs-vfat=y
 CONFIG_PACKAGE_kmod-macremapper=m
 CONFIG_TARGET_IMAGES_PAD=y
@@ -213,10 +234,40 @@ CONFIG_KERNEL_DEFAULT_SCHEDULER=y
 CONFIG_KERNEL_MPTCP=y
 CONFIG_KERNEL_MPTCP_IPV6=y
 CONFIG_KERNEL_CRYPTO_SHA256=y
+CONFIG_LUCI_LANG_hu=y
+CONFIG_LUCI_LANG_pt=y
+CONFIG_LUCI_LANG_sk=y
+CONFIG_LUCI_LANG_ro=y
 CONFIG_LUCI_LANG_en=y
+CONFIG_LUCI_LANG_pl=y
+CONFIG_LUCI_LANG_uk=y
+CONFIG_LUCI_LANG_ja=y
+CONFIG_LUCI_LANG_vi=y
+CONFIG_LUCI_LANG_de=y
+CONFIG_LUCI_LANG_no=y
+CONFIG_LUCI_LANG_ms=y
 CONFIG_LUCI_LANG_zh_Hans=y
 CONFIG_LUCI_LANG_zh_Hant=y
+CONFIG_LUCI_LANG_ko=y
+CONFIG_LUCI_LANG_he=y
 CONFIG_LUCI_LANG_zh-tw=y
+CONFIG_LUCI_LANG_tr=y
+CONFIG_LUCI_LANG_sv=y
+CONFIG_LUCI_LANG_ru=y
+CONFIG_LUCI_LANG_el=y
+CONFIG_LUCI_LANG_ca=y
+CONFIG_LUCI_LANG_es=y
+CONFIG_LUCI_LANG_pt_BR=y
+CONFIG_LUCI_LANG_cs=y
+CONFIG_LUCI_LANG_fr=y
+CONFIG_LUCI_LANG_it=y
+CONFIG_LUCI_LANG_ar=y
+CONFIG_LUCI_LANG_bg=y
+CONFIG_LUCI_LANG_bn_BD=y
+CONFIG_LUCI_LANG_fi=y
+CONFIG_LUCI_LANG_hi=y
+CONFIG_LUCI_LANG_mr=y
+CONFIG_LUCI_LANG_nb_NO=y
 CONFIG_TARGET_ROOTFS_PARTSIZE=512
 CONFIG_TARGET_KERNEL_PARTSIZE=64
 CONFIG_OPENSSL_WITH_CHACHA_POLY1305=y
@@ -241,7 +292,13 @@ CONFIG_PACKAGE_cfdisk=y
 CONFIG_PACKAGE_fdisk=y
 CONFIG_PACKAGE_lsblk=y
 CONFIG_PACKAGE_xfs-mkfs=y
+CONFIG_AUTOREMOVE=y
 # CONFIG_PACKAGE_kmod-sound-core is not set
 # CONFIG_PACKAGE_kmod-video-core is not set
 # CONFIG_PACKAGE_kmod-leds-ubnt-ledbar is not set
 # CONFIG_PACKAGE_kmod-ath11k-pci is not set
+# CONFIG_PACKAGE_logd is not set
+CONFIG_GNUTLS_CRYPTODEV=y
+CONFIG_PACKAGE_kmod-phylink=y
+CONFIG_OPENVPN_openssl_ENABLE_DCO=y
+CONFIG_KERNEL_NF_CONNTRACK_DESTROY_HOOK=y
